test/classes/casts/argumentCoerce_Const/error/from-unmanaged-A-nilable-to-owned-A-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
// coercing from unmanaged A? to owned A?
proc bar(const x: owned A?) {}
proc foo() {
  var a = new unmanaged A?();
  bar(a);
}
proc main() {
  foo();
}
